a1/brendan_gordon/TEST_PROGRAMS/invalidtype/chia-wei_liu/invalid3.min
var x: int;
var y: float;

if (x+y) then
	print x;
endif

